--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -372,6 +372,23 @@ the site on Topology and Groups by Prof. Jonny Evans.
   If $A$ is a deformation retract of $X$ then $X\simeq A$.
 \end{proposition}
 
+\begin{definition}[Homotopy extension property]
+  A pair of spaces $(X,A)$ has the \textit{homotopy extension property} if for any 
+  $f:X\rightarrow Y$, and homotopy $H$ of $h=f|_A$, this homotopy extends to a homotopy 
+  $F$ of $f$.
+\end{definition}
+
+\begin{theorem}
+  If $A\subseteq X$, $X$ a cell-complex and $A$ a subcomplex, then $(X,A)$ has the 
+  homotopy extension property.
+\end{theorem}
+
+\begin{corollary}
+  If $A\subseteq X$, $X$ a CW complex, $A$ a subcomplex, $A$ contractible, then the 
+  quotient map $q:X\rightarrow X/A$ (collapse $A$ to a single point) is a homotopy 
+  equivalence.
+\end{corollary}
+
 \subsection{Paths and path-homotopy}
 
 \begin{definition}[Path-homotopy]
@@ -635,6 +652,84 @@ locally contractible.
     \[X_H\cong N(H)/H\] In particular if $H=1<\pi_1(X,x_0)$, then
     \[Aut(X_H)\cong\pi_1(X,x_0)\] in which case $X_H$ is the \textit{universal cover}.
   \end{enumerate}
-  
 \end{theorem}
+
+\begin{proposition}
+  Define $f:\pi_1(X,x_0)\rightarrow p^{-1}(x)$ by \[[\gamma]\mapsto\tilde{\gamma}(1)\] Then,
+  \[f([\gamma_1])=f([\gamma_2])\iff [\gamma_1][\gamma_2]^{-1}\in H, \,[\gamma_1]\in H[\gamma_2]
+  \] i.e., $[\gamma_1],[\gamma_2]$ determine the same right coset of $H$, and the map 
+  $f$, factors through $H\backslash G$ (through the map $\tilde{f}$)
+  \[
+  \begin{tikzcd}
+    G \arrow{r}{f} \arrow[swap]{dr}{} & p^{-1}(x_0) \\
+     & H\backslash G \arrow{u}{\tilde{f}}
+  \end{tikzcd}
+\]
+and by a similar argument, we get a bijection 
+\[\text{f}\rightarrow p^{-1}(x_0), \,\,\,\tilde{f}(H)=y_0\]
+\end{proposition}
+
+\begin{corollary}
+  \[[H:G]=|H\backslash G|=|p^{-1}(x_0)|\] i.e., degree of the cover is equal to the index 
+  of the subgroup.
+\end{corollary}
+
+\begin{theorem}[General lifting lemma]
+  \[
+  \begin{tikzcd}
+    & (Y,y_0) \arrow{d}{p}  \\
+    (Z,z_0) \arrow{r}{f} \arrow{ur}{\tilde{f}}  &  (X,x_0)
+  \end{tikzcd}
+\]
+Suppose $Z$ is path-connected and locally contractible. Then there exists a unique lift 
+\[\tilde{f}:(Z,z_0)\rightarrow(Y,y_0)\iff f_*(\pi_1(Z,z_0))\subset p_*(\pi_1(Y,y_0))\]
+\end{theorem}
+
+\begin{corollary}
+  \[
+  \begin{tikzcd}
+     (Y,y_0) \arrow[rr, shift left, "h_0"] \arrow{dr}{p_0} && (Y_1,y_1) \arrow[ll, shift left, "h_1"]{h_1}
+     \arrow{dl}{p_1}  \\
+     & (X,x_0)
+  \end{tikzcd}
+\]
+Suppose $p_{0_*}(\pi_1(Y_0,y_0))=p_{1_*}(\pi_1(Y_1,y_1))$, then,
+\[\exists!h:(Y_0,y_0)\xrightarrow{\cong}(Y_1,y_1)\]
+so any two path-connected locally contractible pointed covers which correspond 
+to the same subgroup are equivalent. In particular this proves the injectivity claim
+in statement (1) of the theorem for classification of covering spaces.
+\end{corollary}
+
+\begin{theorem} Let $G=\pi_1(X,x_0), \,g\in G$, and $H=p_*(\pi_1(X_H,x_H))$, so 
+  $g^{-1}Hg=p_*(\pi_1(X_H,x_H\cdot g))$.
+  \[
+    \begin{tikzcd}
+       (X_H,x_H) \arrow[rr, "h"] \arrow{dr}{p} && (X_H,x_H\cdot g) 
+       \arrow{dl}{p}  \\
+       & (X,x_0)
+    \end{tikzcd}
+  \]
+  By the general lifting lemma, we know $\exists h\iff H<g^{-1}Hg$. If such an $h$ exists,
+  then it is also a covering transformation (isomorphism), so equivalently we have 
+  \[\#h^{-1}(x_H\cdot g)=1\] i.e., $g^{-1}Hg=H$, which is equivalent to $g\in N(H)$. Hence 
+  we have, the following, 
+  \[\exists h_g:(X_H,x_H)\xrightarrow{\cong}(X_H,x_H\cdot g)\iff g\in N(H)\]
+  which also defines a surjective map 
+  \[N(H)\rightarrow \{h:X_H\rightarrow X_H\,|\,h\text{ a covering transformation}\}\]
+  \[g\mapsto h_g:X_H\rightarrow X_H\]
+\end{theorem}
+
+\begin{theorem}
+  \[Aut(X_H)\cong N(H)/H\]
+\end{theorem}
+\begin{definition}[Normal cover, universal cover and the deck group]
+  If $H\triangleleft G$, then $X_H$ is said to be a \textit{normal cover}. If $H=1$, 
+  then $X_H$ is simply connected, and is denoted $\tilde{X}$, called the \textit{universal
+  cover}. We call $Aut(\tilde{X})$ the \textit{deck group}. \\
+
+  \noindent 
+  If such an $\tilde{X}$ exists, then \[Aut(\tilde{X})\cong G\text{ and }X_H=\tilde{X}/H\] In
+  particular, $X=\tilde{X}/G$.
+\end{definition}
 \end{document}
+
