--- a/algebraic-topology/algebraic-topology-math0023.tex
+++ b/algebraic-topology/algebraic-topology-math0023.tex
@@ -2141,7 +2141,7 @@ $X$, $Y$.
 	\begin{eqnarray*}
 		\chi(X\times Y)&=&\chi(X)\chi(Y')+\chi(X)\chi(\hat{\sigma_{k+1}})-\chi(X)\chi(Y'\cap
 		\hat{\sigma_{k+1}}) \\
-		&=& \chi(X)[\chi(Y')+\chi(\hat{\sigma_{k+1}}-\chi(Y'\cap\hat{\sigma_{k+1}}))] \\
+		&=& \chi(X)[\chi(Y')+\chi(\hat{\sigma_{k+1}})-\chi(Y'\cap\hat{\sigma_{k+1}})] \\
 		&=& \chi(X)\chi(Y)
 	\end{eqnarray*}
 	hence \[\chi(X\times Y)=\chi(X)\chi(Y)\] for any finite complexes $X, Y$.
