some styling changes, added README.md

--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -827,7 +827,7 @@ The real important thing is that reduced representative is \textit{unique}.
 \end{definition}
 
 \begin{proposition}
-  Any graph $X$ contains a maximal forest, and if $X$ is connected, $F$ is free.
+  Any graph $X$ contains a maximal forest, and if $X$ is connected, $F$ is a tree.
 \end{proposition}
 \end{document}
 
