--- a/texnotes/measure-theory-math0017.tex
+++ b/texnotes/measure-theory-math0017.tex
@@ -31,6 +31,7 @@
 \maketitle
 
 \pagenumbering{roman}
+Trimmed down notes based on Measure Theory notes/course in Autumn 2021 given by Prof Costante Belletini.
 \begingroup
 \let\cleardoublepage\clearpage
 \tableofcontents
