typo fix in measure theory notes

--- a/texnotes/measure-theory-math0017.tex
+++ b/texnotes/measure-theory-math0017.tex
@@ -93,7 +93,7 @@ Trimmed down notes based on Measure Theory notes/course in Autumn 2021 given by 
 \end{definition}
 \begin{definition}
   A (positive) measure $\mu$ on a space $X$ is 
-  an assignment \[\mu:A\rightarrow[0,+\infty]\]
+  an assignment \[\mu:\mathcal{A}\rightarrow[0,+\infty]\]
   defined on a $\sigma$-algebra $\mathcal{A}$,
   such that 
   \begin{enumerate}
